# IronDeveloper

./: .gitattributes  .gitignore  Directory.Build.props  IronDev.slnx  README.md  docker-compose.weaviate.yml  workbench-version.json
Backups_20260515/: Backup_ChatMessages.json  Backup_ChatSessions.json  Backup_ImplementationPlans.json  Backup_ProjectDecisions.json  Backup_ProjectSummaries.json  Backup_ProjectTickets.json
Database/: README.md  apply-migrations.ps1  check-sql-inventory.ps1  local_dev_setup.sql  migrate_accepted_approval.sql  migrate_agent_handoff.sql  migrate_agent_local_memory.sql  migrate_agent_memory_execution_audit.sql  migrate_agent_memory_handoff.sql  migrate_agent_memory_improvement_proposals.sql  migrate_agent_memory_indexing.sql  migrate_agent_memory_influence.sql  migrate_agent_memory_permissions.sql  migrate_agent_memory_stored_procedures.sql  migrate_agent_run_audit_envelope.sql  migrate_apply_dry_run_store.sql  migrate_approval_decision.sql  migrate_chat_document_sources.sql  migrate_chat_message_tags_envelope.sql  migrate_chat_turn_audit.sql  migrate_collective_memory.sql  migrate_constraint_index_audit.sql  migrate_controlled_dry_run_receipt.sql  migrate_decisions_category_status.sql  migrate_dogfood_receipt.sql  migrate_governance_event.sql  migrate_implementation_plans.sql  migrate_memory_index_lifecycle.sql  migrate_memory_proposal_staging.sql  migrate_patch_artifact.sql  (+68 more)
IronDev.TauriShell/src-tauri/: Cargo.toml  tauri.conf.json
IronDev.TauriShell/src-tauri/icons/: icon.icns
IronDev.TauriShell/src-tauri/src/: lib.rs  main.rs
(+3624 files in other folders)
