[package]
name = "irondev-tauri-shell"
version = "0.1.0"
description = "IronDev Tauri shell spike"
authors = ["IronDev"]
edition = "2021"

[lib]
name = "irondev_tauri_shell_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2.7.1"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
