[package]
name = "irondev-desktop"
version = "0.5.0"
description = "IronDev governed engineering desktop application"
authors = ["IronDev"]
edition = "2021"

[lib]
name = "irondev_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2.7.1"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
